Set up todo list container

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,3 +4,40 @@
     box-sizing: border-box;
 }
 
+body {
+    background-image: linear-gradient(
+        180deg,
+        hsl(169deg 72% 65%) 0%,
+        hsl(177deg 71% 55%) 11%,
+        hsl(182deg 100% 43%) 22%,
+        hsl(187deg 100% 45%) 33%,
+        hsl(191deg 100% 46%) 44%,
+        hsl(195deg 100% 47%) 56%,
+        hsl(198deg 100% 48%) 67%,
+        hsl(201deg 100% 47%) 78%,
+        hsl(204deg 100% 47%) 89%,
+        hsl(219deg 74% 59%) 100%
+        );
+    width: 100vw;
+    height: 100vh;
+}
+
+.todo-list-container {
+    margin: 0 auto;
+    padding: 30px;
+    background-color: whitesmoke;
+    max-width: 450px;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 12px;
+}
+
+h1 {
+    font-size: 36px;
+}
+
+
+
