--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,7 +81,7 @@ h1 {
     gap: 4px;
 }
 
-.form-top input {
+.todo-input {
     width: 100%;
     padding: .5em;
     border: 1.5px solid #e6e6e6;
@@ -89,7 +89,7 @@ h1 {
     color: #757069;
 }
 
-.form-top button {
+.add-todo {
     padding: 0.5em 0.8em;
     background-color: #8e4aea;
     border: none;
@@ -102,12 +102,12 @@ h1 {
     width: 100%;
 }
 
-.form-todos ul {
+.todo-list {
     list-style-type: none;
     padding: 20px 0;
 }
 
-.form-todos li::before { 
+.todo-item::before { 
     content: "\2610";
     margin-right: 0.5em;
     position: relative;
@@ -115,7 +115,7 @@ h1 {
     cursor: pointer;
 }
 
-.form-todos li {
+.todo-item {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -128,20 +128,29 @@ h1 {
     margin: 0.5em 0;
 }
 
-.form-todos .todo-container {
+.todo-entry {
     width: 100%;
+    height: 52px;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
-.form-todos img {
-    display: inline;
+.delete-icon {
     padding: 0.2em;
     background-color: #f34235;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
+
+    display: inline;
+    transition: 2s display ease-in-out;
+}
+
+.hide-delete {
+    display: none;
+    transition: 2s display ease-in-out;
 }
 
 .form-bottom {
@@ -152,7 +161,7 @@ h1 {
     align-items: center;
 }
 
-.form-bottom button {
+.clear-all {
     padding: 0.5em 0.8em;
     background-color: #8e4aea;
     border: none;
